--- a/NetExplorer/templates/NetExplorer/gene_card.html
+++ b/NetExplorer/templates/NetExplorer/gene_card.html
@@ -84,7 +84,7 @@
                 {% else %}
                 <!--PREDICTED NODE CARD -->
                 {% if node.off_symbol %}
-                    <h3><span class="bg-success"><b>{{node.off_symbol}}</b></span></h3>
+                    <h3><span class="bg-official"><b>{{node.off_symbol}}</b></span></h3>
                 {% endif %}
                     <h2>Sequence information</h2>
                     <hr>
