--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -91,7 +91,7 @@
                     <div class="symbol-small-searchpanel">
 
                         {% if node.off_symbol %}
-                            <span class="bg-success"><b>{{node.off_symbol}}</b></span> -
+                            <span class="bg-official"><b>{{node.off_symbol}}</b></span> -
                         {% endif %}
 
                         {{ node.symbol }}
