--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -27,7 +27,7 @@
                         <select name="database" class="selectpicker" title="Select Database">
                             <option value="Human">Human</option>
                             {% for db in databases %}
-                                <option value="{{ db }}">{{ db }}</option>
+                                <option value="{{ db.name }}">{{ db.name }}</option>
                             {% endfor %}
                         </select>
                         <button type="submit" value=" Send" class="btn btn-info" id="submit">Search</button>
