--- a/NetExplorer/templates/NetExplorer/blast.html
+++ b/NetExplorer/templates/NetExplorer/blast.html
@@ -37,7 +37,7 @@
 
     <div class="panel-body">
 
-        <form id="blast_form" method="post" enctype="multipart/form-data" action="{% url blast %}">
+        <form id="blast_form" method="post" enctype="multipart/form-data" action="{% url 'blast' %}">
             {% csrf_token %}
 
             <h2>Query</h2>
@@ -55,7 +55,7 @@
             <select id="database-selection" name="database" class="selectpicker" title="Select Database">
                 <option value="Human">Human</option>
                 {% for db in databases %}
-                    <option value="{{ db }}">{{ db }}</option>
+                    <option value="{{ db.name }}">{{ db.name }}</option>
                 {% endfor %}
             </select>
             <br><br>
