--- a/NetExplorer/templates/NetExplorer/gene_card.html
+++ b/NetExplorer/templates/NetExplorer/gene_card.html
@@ -16,7 +16,7 @@
 
         <div class="card-subtitle">
             <h3>
-                <a target="_blank" title="Information about the dataset" href="{% url datasets %}#{{ node.database }}">
+                <a target="_blank" title="Information about the dataset" href="{% url 'datasets' %}#{{ node.database }}">
                     <img class='legend-db' src="{% static 'Images/' %}legend-{{ node.database }}.png"/>
                     {{ node.database }}
                 </a>
@@ -116,7 +116,7 @@
                     <hr class="h2-sep">
 
                     <h3>Read sequence:</h3>
-                    <a href="{% url get_fasta %}?genesymbol={{ node.symbol|urlencode }}&database={{ node.database }}&type=sequence">
+                    <a href="{% url 'get_fasta' %}?genesymbol={{ node.symbol|urlencode }}&database={{ node.database }}&type=sequence">
                         <div class="download-fasta-wrapper" title="Download FASTA file">
                             <img class="download-fasta" src="{% static 'Images/download-icon.png' %}">
                             Download FASTA
@@ -128,7 +128,7 @@
                     </div>
 
                     <h3>Longest Orf sequence:</h3>
-                    <a href="{% url get_fasta %}?genesymbol={{ node.symbol|urlencode }}&database={{ node.database }}&type=orf">
+                    <a href="{% url 'get_fasta' %}?genesymbol={{ node.symbol|urlencode }}&database={{ node.database }}&type=orf">
                         <div class="download-fasta-wrapper" title="Download FASTA file">
                             <img class="download-fasta" src="{% static 'Images/download-icon.png' %}">
                             Download FASTA
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-sm-2">
                             <a href="#" class="view-on-netexplorer" data-toggle="tooltip" data-placement="top" title="View on NetExplorer">
-                                <form class="view-on-netexplorer" method="POST" action="{% url net_explorer %}" target="_blank"> {% csrf_token %}
+                                <form class="view-on-netexplorer" method="POST" action="{% url 'net_explorer' %}" target="_blank"> {% csrf_token %}
                                     <input type="hidden" name="json_text" value='{{ json_graph|safe }}' />
                                     <button id="netexplorer-mini" class="btn btn-default netexplorer-view view-on-netexplorer-btn" type="submit">
                                         <img src="{% static 'Images/netexplorer-mini.png' %}" class="netexplorer-mini"/>
@@ -324,6 +324,7 @@
                 {% endif %} <!-- If Human or PredictedNode -->
     </body>
 
+    <script src="{% static 'js/root.js' %}"></script>
     <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
     <script>
         $('.card-link').click(function() {
@@ -335,14 +336,14 @@
                 targetDB    : $(this).attr("targetDB"),
                 csrfmiddlewaretoken: '{{ csrf_token }}'
             }
-            var new_url = '{% url index_view %}gene_card/' + card_data.targetDB + "/" + card_data.target;
+            var new_url = '{% url 'index_view' %}gene_card/' + card_data.targetDB + "/" + card_data.target;
             history.pushState(card_data, null, new_url);
 
             // Load Get request html on current card-overlay
             $.ajax({
                 type: "GET",
                 context: this, //this makes the this variable visible inside the success
-                url: "{% url get_card %}",
+                url: "{% url 'get_card' %}",
                 cache: true,
                 data: {
                     'target'    : card_data['target'],
@@ -372,7 +373,7 @@
                 $.ajax({
                     type: "GET",
                     context: this, //this makes the this variable visible inside the success
-                    url: "{% url get_card %}",
+                    url: "{% url 'get_card' %}",
                     cache: true,
                     data: {
                         'target'    : event.state['target'],
