--- a/NetExplorer/templates/NetExplorer/gene_card_fullscreen.html
+++ b/NetExplorer/templates/NetExplorer/gene_card_fullscreen.html
@@ -292,6 +292,7 @@
         </div>
     </body>
 
+    <script src="{% static 'js/root.js' %}"></script>
     <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
     <script>
         $(document).ready(function(){
