--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -35,12 +35,12 @@
                          type="text" class="form-control" 
                          name="genesymbol" placeholder="Enter Symbol(s)">
 
-                        <select name="database" class="selectpicker" title="Select Database" data-size="5">
+                        <select id="genesearch-database" name="database" class="selectpicker" title="Select Database" data-size="8">
                             <option data-content="<span class='badge badge-success human-select'>Human</span>" value="Human">Human</option>
                             <option data-content="<span class='badge badge-success gene-select'>Planarian Gene</span>" value="Smesgene">Planarian Gene</option>
                             <option data-divider="true"></option>
                             {% for db in databases %}
-                                <option value="{{ db.name }}">{{ db.name }}</option>
+                                <option data-content="<img class='legend-db' src='{% static 'Images/' %}legend-{{ db.name }}.png'>{{ db.name }}" value="{{ db.name }}">{{ db.name }}</option>
                             {% endfor %}
                         </select>
                         <button type="submit" value=" Send" class="btn btn-info" id="submit">Search</button>
