Db select for blast updated.

--- a/NetExplorer/templates/NetExplorer/blast.html
+++ b/NetExplorer/templates/NetExplorer/blast.html
@@ -53,9 +53,11 @@
             <hr>
             <h2>Database</h2>
             <select id="database-selection" name="database" class="selectpicker" title="Select Database">
-                <option value="Human">Human</option>
+                <option data-content="<span class='badge badge-success human-select'>Human</span>" value="Human">Human</option>
+                <option data-content="<span class='badge badge-success gene-select'>Planarian Gene</span>" value="Smesgene">Planarian Gene</option>
+                <option data-divider="true"></option>
                 {% for db in databases %}
-                    <option value="{{ db.name }}">{{ db.name }}</option>
+                    <option data-content="<img class='legend-db' src='{% static 'Images/' %}legend-{{ db.name }}.png'>{{ db.name }}" value="{{ db.name }}">{{ db.name }}</option>
                 {% endfor %}
             </select>
             <br><br>
