--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -182,6 +182,11 @@
                         <li>The identifiers were not correctly spelled.</li>
                         <li>The requested gene/contig may not have human homologs, and thus, is not present in our database.</li>
                     </ul>
+                    <h2>Possible Solutions:</h2>
+                    <ul>
+                        <li>If using Human/gene symbols, try to use asterisks, e.g.: search for WNT* instead of WNT5.</li>
+                        <li>Search on "All databases" instead of a particular Dataset.</li>
+                    </ul>
                 </div>
             </div>
         {% elif search_error == 2 %}
