--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -226,4 +226,13 @@
             });
         } );
     </script>
+    <script>
+        $("#genesearch-genesymbol").autocomplete({
+            source: function (request, response) { 
+                autocompleteContig(request.term, response);
+            
+            },
+            minLength: 2
+        });
+    </script>
 {% endblock scripts %}
