--- a/NetExplorer/templates/NetExplorer/gene_search.html
+++ b/NetExplorer/templates/NetExplorer/gene_search.html
@@ -229,10 +229,25 @@
     <script>
         $("#genesearch-genesymbol").autocomplete({
             source: function (request, response) { 
-                autocompleteContig(request.term, response);
+                autocompleteContig(extractLast( request.term ), response);
             
             },
-            minLength: 2
+            minLength: 2,
+            focus: function() {
+                // prevent value inserted on focus
+                return false;
+            },
+            select: function( event, ui ) {
+                var terms = splitSearch( this.value );
+                // remove the current input
+                terms.pop();
+                // add the selected item
+                terms.push( ui.item.value );
+                // add placeholder to get the comma-and-space at the end
+                terms.push( "" );
+                this.value = terms.join( ", " );
+                return false;
+            }
         });
     </script>
 {% endblock scripts %}
